changed font-size and try to fix button on mobile version

--- a/style.css
+++ b/style.css
@@ -120,3 +120,20 @@ p{
         padding-top: 10vh !important;
     }
 }
+
+@media (max-width: 768px) { 
+    .size-mobile {
+        font-size: 27px !important;
+    }
+    .size-second-mobile {
+        font-size: 16px !important;
+    }
+    .navbar-toggler-second {
+        padding: .25rem .75rem;
+        font-size: 1.25rem;
+        line-height: 1;
+        background-color: transparent;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        transition: box-shadow .15s ease-in-out;
+}
